# voraus-ipc-tools-ansible

./: .ansible-lint.yml  .gitignore  LICENSE.txt  Makefile  README.md  README.rst  inventory.example.yml  jreleaser.yml  pyproject.toml  requirements.yml  sonar-project.properties  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  docs.yml  link_to_docs.yml  lint.yml  pipeline.yml  publish.yml  test.yml
docs/: conf.py  get_started.rst  index.rst  roles
docs/_scripts/: generate_license_information.py
docs/_static/default/css/: custom.css
molecule/core_isolation/: molecule.yml  prepare.yml
molecule/core_isolation/tests/: test_core_isolation.py
molecule/example-playbook/: molecule.yml  requirements.yml
molecule/example-playbook/tests/: test_apt_packages.py  test_realtime_kernel.py  test_wibu_codemeter.py
molecule/example_playbook/: molecule.yml
molecule/example_playbook/tests/: test_apt_packages.py  test_core_isolation.py  test_wibu_packages.py
molecule/grub_config/: molecule.yml  prepare.yml
molecule/grub_config/tests/: test_grub_config.py
molecule/realtime_kernel/: molecule.yml  prepare.yml
molecule/realtime_kernel/tests/: test_realtime_kernel.py
molecule/shared/: converge.yml  prepare.yml  test_utils.py
molecule/wibu_axprotector/: molecule.yml
molecule/wibu_axprotector/tests/: test_wibu_axprotector.py
molecule/wibu_codemeter/: converge.yml  molecule.yml
molecule/wibu_packages/: molecule.yml  prepare.yml  requirements.yml
molecule/wibu_packages/tests/: test_wibu_packages.py
scripts/: setup-ansible-env.sh
voraus/ipc_tools/: README.md  galaxy.in.yml
voraus/ipc_tools/playbooks/: example.yml
voraus/ipc_tools/roles/core_isolation/: README.md
voraus/ipc_tools/roles/core_isolation/defaults/: main.yml
voraus/ipc_tools/roles/core_isolation/meta/: main.yml
voraus/ipc_tools/roles/core_isolation/tasks/: irq_management.yml  main.yml  set_variables.yml
voraus/ipc_tools/roles/core_isolation/templates/: 50-scope_cpu_isolation.conf.j2  50-slice_cpu_isolation.conf.j2  coreisolation.service.j2  coreisolation.sh.j2
voraus/ipc_tools/roles/grub_config/: README.md
voraus/ipc_tools/roles/grub_config/defaults/: main.yml
voraus/ipc_tools/roles/grub_config/meta/: main.yml
voraus/ipc_tools/roles/grub_config/tasks/: main.yml  set_variables.yml
voraus/ipc_tools/roles/realtime_kernel/: README.md
voraus/ipc_tools/roles/realtime_kernel/defaults/: main.yml
voraus/ipc_tools/roles/realtime_kernel/handlers/: main.yml
voraus/ipc_tools/roles/realtime_kernel/meta/: main.yml
voraus/ipc_tools/roles/realtime_kernel/tasks/: main.yml  update_kernel_params.yml
voraus/ipc_tools/roles/wibu_axprotector/: README.md
voraus/ipc_tools/roles/wibu_axprotector/defaults/: main.yml
voraus/ipc_tools/roles/wibu_axprotector/meta/: main.yml
voraus/ipc_tools/roles/wibu_axprotector/tasks/: main.yml
voraus/ipc_tools/roles/wibu_codemeter/: README.md  README.rst
voraus/ipc_tools/roles/wibu_codemeter/defaults/: main.yml
voraus/ipc_tools/roles/wibu_codemeter/handlers/: main.yml
voraus/ipc_tools/roles/wibu_codemeter/meta/: main.yml
voraus/ipc_tools/roles/wibu_codemeter/tasks/: main.yml
voraus/ipc_tools/roles/wibu_packages/: README.md
voraus/ipc_tools/roles/wibu_packages/defaults/: main.yml
voraus/ipc_tools/roles/wibu_packages/handlers/: main.yml
voraus/ipc_tools/roles/wibu_packages/tasks/: add_voraus_repo.yml  cleanup_old_repo.yml  install_axprotector.yml  install_codemeter.yml  main.yml
